Fix table header and body column misalignment (responsiveness using word-break: break-all) (#10230)
* Remove invalid `display` properties on table, thead, tbody, and tfoot

- `table` element needs to be `display: table` so that `table-layout: fixed`
works correctly.
- `thead`, `tbody` and `tfoot` need to use their default display properties,
otherwise columns become misaligned between header, body and footer. (#9779)
- Remove unecessary width on `thead`, `tbody`, and `tfoot` which is implicitly
100%
- Use word-break: break-all to ensure content never overflows in table cells

--- a/packages/block-library/src/table/style.scss
+++ b/packages/block-library/src/table/style.scss
@@ -1,9 +1,6 @@
 .wp-block-table {
 	// Fixed layout toggle
-	&.has-fixed-layout thead,
-	&.has-fixed-layout tbody,
-	&.has-fixed-layout tfoot {
-		display: table;
+	&.has-fixed-layout {
 		table-layout: fixed;
 		width: 100%;
 	}
